fixed white space margin on right when testing responsiveness, implemented the sign out function using dispatch, will add styling and force you out of the user page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,17 @@ html,
 body {
   background-color: #F2F4FF;
 }
+
+@media (max-width: 380px) {
+  body {
+    margin: 0; 
+    width: 100%;
+  }
+}
+
+@media (max-width: 250px) {
+  body {
+    margin: 0; 
+    width: 100%;
+  }
+}
