--- a/client/src/pages/games/gameList.css
+++ b/client/src/pages/games/gameList.css
@@ -1,4 +1,12 @@
 
+
+.sort-dropdown,
+.sort-dropdown label,
+.sort-dropdown select {
+  padding: 10px;
+  border-radius: 5%;
+}
+
 .dropdown-menus {
   display: flex;
   justify-content: center;
@@ -27,6 +35,7 @@
   background-color: white;
 }
 
+
 .game-item .gameUrl {
   max-width: 100%;
   overflow: hidden;
@@ -34,11 +43,13 @@
   white-space: nowrap;
 }
 
+
 .game-item img {
   max-width: 100%;
   height: auto;
   border-radius: 5px;
 }
+
 
 .game-item h3 {
   margin: 10px 0;
@@ -58,10 +69,9 @@
   color: #555;
 }
 
-/* game description component styles */
-.game-itemD {
+.game-description-container {
   border: 1px solid #E0E0E0;
-  padding: 20px;
+  padding: 10px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   background-color: white;
@@ -78,6 +88,7 @@
   color: #555;
 }
 
+
 .gameUrlD {
   max-width: 100%;
   overflow: hidden;
@@ -89,20 +100,21 @@
   text-decoration: none;
 }
 
-.game-itemD img {
+
+.game-description-image {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
 }
 
-.game-itemD h3 {
+
+.game-description-title {
   margin: 10px 0;
   font-size: 1.8rem;
   font-weight: bold;
   color: #333;
 }
 
-/* Save button styles */
 .save-button {
   padding: 10px 20px;
   background-color: #007bff;
@@ -110,17 +122,148 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  width: fit-content;
 }
 
 .save-button.saved {
   background-color: #28a745;
 }
 
-.sort-dropdown,
-.sort-dropdown label,
-.sort-dropdown select {
-  padding: 10px;
-  border-radius: 5%;
+.img-descripD {
+  display: flex;
+  align-items: center;
+}
+
+.game-image-container {
+ padding-right: 10px;
+}
+
+.game-details {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.game-details-item{
+  margin-bottom: 10px;
+}
+
+.screenshotsD {
+  margin-top: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.screenshotsD img {
+  max-width: calc(33.33% - 15px); 
+  height: auto;
+  border-radius: 5px;
 }
 
 
+
+  @media (max-width: 768px) {
+    body,
+    .sort-dropdown,
+    .sort-dropdown label,
+    .sort-dropdown select,
+    .dropdown-menus,
+    .container,
+    .game-item,
+    .gameUrl,
+    .game-description-container,
+    .descriptionD,
+    .screenshotsD,
+    .screenshotsD img,
+    .img-descripD,
+    .save-button {
+      margin: 0;
+      padding: 0;
+    }
+  
+    .sort-dropdown,
+    .sort-dropdown label,
+    .sort-dropdown select {
+      padding: 5px; 
+      border-radius: 0;
+      display: flex;
+      justify-content: center;
+    }
+  
+    .dropdown-menus {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 8px; 
+      margin-top: 10px;
+    }
+  
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px; 
+      padding: 10px; 
+      background-color: #F5F5F5;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 0;
+    }
+  
+    .game-item {
+      border: 1px solid #E0E0E0;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+      border-radius: 0;
+      text-decoration: none;
+      background-color: white;
+    }
+  
+    .gameUrl {
+      font-size: 0.9rem; 
+    }
+  
+    .game-description-container {
+      border: 1px solid #E0E0E0;
+      padding: 10px;
+      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+      background-color: white;
+    }
+  
+    .descriptionD {
+      font-size: 1.1rem; 
+      margin-top: 10px;
+    }
+  
+    .screenshotsD {
+      margin-top: 15px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px; 
+      justify-content: center; 
+    }
+  
+    .screenshotsD img {
+      max-width: calc(33.33% - 15px); 
+      height: auto;
+      border-radius: 5px;
+    }
+  
+    .img-descripD {
+      flex-direction: column; /* Stack img-descripD vertically */
+    }
+  
+    .save-button {
+      display: flex;
+      justify-content: center;
+      margin: auto;
+    }
+  }
+
+  @media (max-width: 250px) {
+    body {
+      margin: 0;
+      width: 100%;
+    }
+  }
