--- a/client/src/pages/signIn/signIn.css
+++ b/client/src/pages/signIn/signIn.css
@@ -38,10 +38,11 @@ h2 {
 }
 
 .form-control {
-  width: 98%;
+  width: 95%;
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 5px;
+  padding-left: 10px;
 }
 
 .btn {
